_archive/content-services/5.1/concepts/dev-api-functional-reference.md
---
author: Alfresco Documentation
---

# Using the APIs

There is common functionality that is often accessed by developers in Alfresco. For example, there is often a requirement to obtain a list of users, groups or sites, or search for a list of documents.

Sometimes you need to create and manage workflows, or transform documents. A list of common functions and usages is provided here, and all supported APIs for working with that functionality. While the list of functionality is only meant to cover common tasks, links to more information are provided. See also the [Platform extensions](dev-platform-extensions.md) and [Share extensions](dev-extensions-share.md) to explore the full developer interface.

-   **[By Language](../concepts/dev-api-by-language.md)**  
Provides API information based on what type of language that is used when building the extension.
-   **[By Function](../concepts/dev-api-by-function.md)**  
Provides API information based on what type of operation that should be executed.

**Parent topic:**[API guide](../concepts/dev-api-intro.md)

