_archive/content-services/5.2/concepts/dev-api-functional-reference.md
---
author: [Alfresco Documentation, Alfresco Documentation]
---

# Using the APIs

There is common functionality that is often accessed by developers in Alfresco Content Services. For example, there is often a requirement to obtain a list of users, groups or sites, or search for a list of documents.

Sometimes you need to create and manage workflows, or transform documents. A list of common functions and usages is provided here, and all supported APIs for working with that functionality. While the list of functionality is only meant to cover common tasks, links to more information are provided. See also the [Platform extensions](dev-platform-extensions.md) and [Share extensions](dev-extensions-share.md) to explore the full developer interface.

-   **[Java API](../concepts/dev-api-by-language-java.md)**  
Provides Java API information.
-   **[ReST API](../concepts/dev-api-by-language-alf-rest.md)**  
This section provides information about Alfresco ReST API version 1.0 and how to use it.
-   **[CMIS API \(OASIS ReST Standard\)](../concepts/dev-api-by-language-cmis.md)**  
Provides CMIS API information.
-   **[Using the APIs by Function](../concepts/dev-api-by-function.md)**  
Provides API information based on what type of operation that should be executed.

**Parent topic:**[API guide](../concepts/dev-api-intro.md)

